# 20252R0136COSE36203

./: .gitignore  README.md  final_end2end_notebook.ipynb  pyproject.toml
experiments/v1/: config.json  feature_importance.csv  metrics.json  model.joblib  predictions_sample.csv
experiments/v2/: config.json  feature_importance.csv  metrics.json  model.joblib  predictions_sample.csv
experiments/v3/: config.json  feature_importance.csv  metrics.json  model.joblib  predictions_sample.csv
experiments/v6_0_pure_external/: feature_importance.csv
experiments/v6_2_optuna/: best_params.json  create_feature_importance.py  create_visualizations.py  ensemble_comparison.csv  feature_importances.json  final_summary.json  model_comparison.csv  optimization_history.json  optuna_optimization.py
experiments/v6_pure_external/: cv_results.csv  summary.json
src/: __init__.py
src/analysis/: __init__.py  feature_importance.py
src/features/: __init__.py  event_features.py  feature_pipeline.py  interaction_features.py  lag_features.py  time_features.py  weather_features.py
src/models/: __init__.py  base_model.py  v1_baseline.py  v2_no_lag.py  v6_hyperparameter_tuning.py  v6_pure_external.py
src/preprocessing/: __init__.py  event_preprocessor.py  load_data.py  merge_datasets.py
