[project]
name = "preprocess"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
    "chardet>=5.2.0",
    "charset-normalizer>=3.4.4",
    "ipykernel>=6.31.0",
    "scikit-learn>=1.6.1",
    "matplotlib>=3.9.4",
    "lightgbm>=4.0.0",
    "joblib>=1.3.0",
    "xgboost>=2.0.0",
    "catboost>=1.2.0",
    "optuna>=3.5.0",
]

[tool.uv.workspace]
members = [
    "ku-ml",
]
